# CoupledOpt

./: .gitignore  CLionCodeFormat.xml  CMakeLists.txt  README.md  example.prm  main.cc
include/: DataOutput.h  Driver.h  Mesh.h  Parameter.h  Regularization.h
include/BVP/EDD/: EddBVP_.h  EddElasticityLin.h  EddTools.h
include/BVP/Standard/: BVP_.h  ElasticityLin.h
include/Material/: Material.h
include/Optimizer/: AlMoMOptimizer.h  Optimizer_.h
include/Responses/: Compliance.h  ResponseHandler.h  Response_.h  Volume.h
include/Utils/: GeometryAlgorithms.h  Utilities.h
source/: Driver.cc  Parameter.cc
source/BVP/EDD/: EddBVP_.cc  EddElasticityLin.cc  EddTools.cc
source/BVP/Standard/: BVP_.cc  ElasticityLin.cc
source/Material/: Material.cc
source/Optimizer/: AlMoMOptimizer.cc  Optimizer_.cc
source/Regularization/: Regularization.cc  TractionMethod.cc
source/Responses/: Compliance.cc  ResponseHandler.cc  Response_.cc  Volume.cc
source/Triangulation/: Mesh.cc  MeshSetup.cc  MeshTracking.cc
source/Utils/: GeometryAlgorithms.cc  Utilities.cc
